renamed filesfor better organization

--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -43,9 +43,14 @@
                 <div class="itemBox__value">{{selected}}</div>
               </div>
             </li>
+            <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
+              <div class="itemBox__cellInner">
+                <div class="itemBox__action "></div>
+              </div>
+            </li>
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--draggable">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action itemBox__action--hidden">އ</div>
+                <div class="itemBox__action ">އ</div>
               </div>
             </li>
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action  JS_itemBox__cell--remove JS_itemBox__action">
