--- a/sass/components/note.scss
+++ b/sass/components/note.scss
@@ -4,7 +4,7 @@
 .note {
   position: relative;
   display: inline-block;
-  padding: 7px 10px;
+  padding: 17px;
   background-color: #F9F9F9;
   border-radius: 3px;
 
