--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -15,40 +15,7 @@
     background-color: #FFF;
     height: 40px;
     line-height: 30px;
-/*
-    &--h1 {
-      background-color: #FFF;
-      border-top: 1px dotted #BFBFBF;
-      height: 60px;
-      line-height: 50px;
 
-      .itemBox {
-        &__cell {
-          &--draggable {
-            .itemBox__cellInner {
-              color: #C79D54;
-              opacity: 0;
-              transition: all .3s ease-in-out;
-            }
-
-            &Placeholder {
-              position: relative;
-              width: 100%;
-              height: 40px;
-              background-color: #FFF;
-              box-shadow: inset 0 0 50px rgba(0,0,0,.3);
-            }
-          }
-
-          &Inner {
-            h2 {
-              font-size: 20px;
-            }
-          }
-        }
-      }
-    }
-*/
     &--thead {
       background: #d9d9d9;
       color: #808080;
@@ -64,56 +31,7 @@
       }
     }
 
-    &--h3 {
-      .itemBox {
-        &__cell {
-          border-bottom: 3px solid #FFEF99;
-
-          &Inner {
-            position: relative;
-            display: inline-block;
-            line-height: 40px;
-            width: auto;
-            height: 40px;
-            overflow: visible;
-            padding: 0 0 0 15px;
-            background-color: #FFEF99;
-            color: #857209;
-
-            &::after {
-              content: '';
-              border-left: 60px solid #FFEF99;
-              border-top: 40px solid transparent;
-              position: absolute;
-              right: -60px;
-              top: 0;
-              margin-top: 0;
-            }
-          }
-        }
-      }
-    }
-
     &--item {
-      &:hover {
-        .itemBox {
-          &__cell {
-            &::before {
-              height: 2px;
-              opacity: 1;
-            }
-          }
-        }
-      }
-
-      &:nth-of-type(odd) {
-        background-color: #F2F2F2;
-      }
-
-      &:nth-of-type(even) {
-        background-color: #FFFFFF;
-      }
-
       .itemBox {
         &__cell {
           &::before {
@@ -163,7 +81,7 @@
         .itemBox {
           &__cell:not(.flex-grow-0) {
             &::after {
-              background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #F2F2F2 90%, #F2F2F2 100%);
+              background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(242,242,242,.5) 50%, #F2F2F2 100%);
             }
           }
         }
@@ -173,14 +91,28 @@
         .itemBox {
           &__cell:not(.flex-grow-0) {
             &::after {
-              background: linear-gradient(to right, rgba(255,255,255,0) 0%, #FFFFFF 90%, #FFFFFF 100%);
+              background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.5) 50%, #FFF 100%);
             }
           }
         }
       }
 
+      &:nth-of-type(odd) {
+        background-color: #F2F2F2;
+      }
+
+      &:nth-of-type(even) {
+        background-color: #FFFFFF;
+      }
+
       &:hover {
         .itemBox {
+          &__cell {
+            &::before {
+              height: 2px;
+              opacity: 1;
+            }
+          }
           &__action {
             &--hidden {
               opacity: 1;
@@ -251,6 +183,13 @@
 
       .itemBox__cellInner {
         padding: 5px;
+      }
+    }
+
+    &--active {
+      &::before {
+        height: 2px;
+        opacity: 1;
       }
     }
 
