--- a/_includes/blocks/popup/ms-suggestions-tags-colors.html
+++ b/_includes/blocks/popup/ms-suggestions-tags-colors.html
@@ -1,4 +1,4 @@
-<div class="itemBox JS_itemBox--children itemBox--children-sublist JS_itemBox--suggestions" style="display: none;">
+<div class="itemBox JS_itemBox--children JS_itemBox--children-sublist itemBox--sublist JS_itemBox--suggestions" style="display: none;">
   {% for item in site.data.tag-picker-color.suggestions %}
     <ul class="itemBox__row">
       <li class="itemBox__cell">
