nr's in selectors itembox

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -93,7 +93,15 @@
     <li class="itemBox__cell">
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
-        <div class="itemBox__value">395415</div>
+        <div class="itemBox__value">
+          <div class="selector selector--expanded">
+            <div class="selector__item selector__item--selected">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--field">395415</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
@@ -138,7 +146,13 @@
     <li class="itemBox__cell">
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
-        <div class="itemBox__value">35825</div>
+        <div class="selector selector--expanded">
+          <div class="selector__item selector__item--selected">
+            <div class="selector__block">
+              <div class="selector__blockPart selector__blockPart--field">35825</div>
+            </div>
+          </div>
+        </div>
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
@@ -261,7 +275,15 @@
         <div class="itemBox__cellInner"></div>
       </li>
       <li class="itemBox__cell">
-        <div class="itemBox__cellInner">32072</div>
+        <div class="itemBox__cellInner">
+          <div class="selector selector--expanded">
+            <div class="selector__item selector__item--selected">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--field">32072</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
       <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
         <div class="itemBox__cellInner">Add indicators in import/export</div>
@@ -304,7 +326,15 @@
         <div class="itemBox__cellInner"></div>
       </li>
       <li class="itemBox__cell">
-        <div class="itemBox__cellInner">32750</div>
+        <div class="itemBox__cellInner">
+          <div class="selector selector--expanded">
+            <div class="selector__item selector__item--selected">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--field">32750</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
       <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
         <div class="itemBox__cellInner">Source files of project in sub-folders of install folder</div>
@@ -344,7 +374,15 @@
         <div class="itemBox__cellInner"></div>
       </li>
       <li class="itemBox__cell">
-        <div class="itemBox__cellInner">32454</div>
+        <div class="itemBox__cellInner">
+          <div class="selector selector--expanded">
+            <div class="selector__item selector__item--selected">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--field">32454</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
       <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
         <div class="itemBox__cellInner">Publish the "binary" and "selenium" (zip) packages as NuGet packages</div>
@@ -394,7 +432,15 @@
     <li class="itemBox__cell">
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
-        <div class="itemBox__value">31795</div>
+        <div class="itemBox__value">
+          <div class="selector selector--expanded">
+            <div class="selector__item selector__item--selected">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--field">31795</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
@@ -439,7 +485,15 @@
     <li class="itemBox__cell">
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
-        <div class="itemBox__value">161531</div>
+        <div class="itemBox__value">
+          <div class="selector selector--expanded">
+            <div class="selector__item selector__item--selected">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--field">161531</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
@@ -484,7 +538,15 @@
     <li class="itemBox__cell">
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
-        <div class="itemBox__value">283377</div>
+        <div class="itemBox__value">
+          <div class="selector selector--expanded">
+            <div class="selector__item selector__item--selected">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--field">283377</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
