--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -190,6 +190,10 @@
 
       .itemBox__cellInner {
         padding: 5px;
+
+        .inline {
+          vertical-align: top;
+        }
       }
     }
 
