--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -19,3 +19,4 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSingleSelect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/calendar.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/ms-columnpicker-options.js"></script>
