--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -44,7 +44,7 @@
               </div>
             </li>
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-              <div class="itemBox__cellInner">
+              <div class="itemBox__cellInner JS_toggle--columnpickerOptions">
                 <div class="itemBox__action "><sup>•</sup></div>
               </div>
             </li>
