added htm files for columnpicker options

--- a/_includes/blocks/popup/ms-sublist-options.html
+++ b/_includes/blocks/popup/ms-sublist-options.html
@@ -3,7 +3,7 @@
   <ul class="itemBox__row itemBox__row--item">
     <li class="itemBox__cell">
       <div class="itemBox__cellInner JS_toggle--options">
-        <div class="selector selector--singleselect selector--expanded JS_selector">
+        <div class="selector selector--singleselect selector--required selector--expanded JS_selector">
           <div class="selector__item JS_selectorItem">
             <div class="selector__block">
               <div class="selector__blockPart selector__blockPart--field"></div>
