--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -45,7 +45,7 @@
             </li>
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
               <div class="itemBox__cellInner JS_toggle--columnpickerOptions">
-                <div class="itemBox__action "><sup>•</sup></div>
+                {% include javascript/ms-columnpickerOption--disabled.html %}
               </div>
             </li>
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--draggable">
