reorganized ms js files

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -6,18 +6,22 @@
 <!-- Plugins -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/sublist-closer.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/sortable.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/reset-to-default.js"></script>
 
 <!-- Components -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/reset-multiselect-actions.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSingleSelect.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/calendar.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/ms-columnpicker-options.js"></script>
+
+<!-- multiselect main-->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/multiselect-popup.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/multiselect-reset.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/multiselect.js"></script>
+
+<!-- multiselect plugins-->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-calendar.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-colorselector.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-columnpicker-options.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-filter.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-incl-excl-filter.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-reset-to-default.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-sortable.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-sublist-closer.js"></script>
